apply plugin: 'war'
apply plugin: 'appengine'

def appengineVersion = "1.9.15"

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "com.google.appengine:gradle-appengine-plugin:1.9.15"
    }
}

sourceCompatibility = JavaVersion.VERSION_1_7
targetCompatibility = JavaVersion.VERSION_1_7

repositories {
    mavenCentral()
}

appengine {

    httpPort = 8888
    downloadSdk = true

    appcfg {
        update {
            useJava7 = true
        }

        jvmFlags = ['-Ddatastore.backing_store=../../src/main/webapp/WEB-INF/appengine-generated/local_db.bin',
                    '-Dappengine.fullscan.seconds=5',
                    '-Xdebug',
                    '-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8889',
                    '-XX:MaxPermSize=512m']
    }

    enhancer {
        api = "jdo"
        version = "v2"
        enhanceOnBuild = true
    }
}

dependencies {
    appengineSdk "com.google.appengine:appengine-java-sdk:${appengineVersion}"

    compile "javax.servlet:servlet-api:2.5"
    compile "javax.servlet:jsp-api:2.0"

    compile "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}"

    compile 'org.ow2.asm:asm:4.0'
    compile 'org.datanucleus:datanucleus-api-jpa:3.1.3'
    compile 'org.datanucleus:datanucleus-api-jdo:3.1.3'
    compile 'com.google.appengine.orm:datanucleus-appengine:2.1.2'
    compile 'org.datanucleus:datanucleus-core:3.1.3'
    compile 'org.apache.geronimo.specs:geronimo-jpa_2.0_spec:1.0'
    compile 'javax.jdo:jdo-api:3.0.1'
    compile 'javax.transaction:jta:1.1'

    compile 'com.google.appengine:appengine-endpoints:1.9.15'

    compile 'com.sun.jersey:jersey-core:1.18.2'
    compile 'com.sun.jersey:jersey-server:1.18.2'

    compile 'org.apache.commons:commons-lang3:3.3.2'

    testCompile "com.google.appengine:appengine-api-1.0-sdk:${appengineVersion}"
    compile "com.google.appengine:appengine-api-labs:${appengineVersion}"
    testCompile "com.google.appengine:appengine-api-stubs:${appengineVersion}"
    testCompile "com.google.appengine:appengine-testing:${appengineVersion}"
    testRuntime "com.google.appengine:appengine-tools-sdk:${appengineVersion}"
}

appengineUpdate.dependsOn test

// Not sure why yet, but tests fail unless this is run (classes not enhanced)
test.dependsOn appengineEnhance

test {
    testLogging {
        events "passed", "skipped", "failed"
    }
}

